2004-03-15  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b8)

	* Fixed a bug in the applet uploader, where added pictures were
	  not shown.
	* From this version on, the applets are signed with a certificate
	  authneticated by Thawte.

	This is considered a final candidate for GR 1.3.2.

2004-02-27  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b7)

	* Added support for Basic auth username and password embedded in
	  URL, such as http://user:pass@server/path/. This is obviously
	  an insecure way of storing passwords. Thanks to Mindstorm for
	  letting me test on his server.
	* Fixed a bunch of niggles with the Auth dialog.
	* Added flushing of the JTree when adding a new
	  album. It's better than fetching the albums again from the server
	  but it loses album state. I spent two days trying to debug this
	  but I can't crack this problem of the JTree not refreshing.
	  Help needed!

2004-02-25  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b6)

	* Solved a very long-standing problem where I didn't know how
	  to get the albums tree to draw correctly when adding images
	  (the album name would be truncated).
	* When adding an album, no longer refreshing the list of albums
	  (this makes it faster and doesn't lose the album tree's
	  disclosure status)
	* When downloading pictures from the server, flush any previously
	  downloaded pictures first.
	* Made fetching list of albums from the server slightly faster
	  by disabling events during the download, so the window is
	  only refreshed when the download completes.
	* Fixed a bug in GRI18n where quote characters in strings that
	  are subjected to pattern-matching to replace some of the text at
	  runtime would cause the pattern-matching algorithm to barf.
	  Also created a cache for patterns.

2004-02-25  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b5)

	* Updated French translation by Alex Lemaresquier.
	* Added debugging info to trace bug where adding pictures via
	  Browse... doesn't work but DnD'ing them does.
