@@ -213,7 +213,7 @@ MainFrame.quitQuestion=Quitter sans avoir sauvegard\u00E9 auparavant entra\u00EE
 MainFrame.quitQuestion.title=Attention
 MainFrame.selPicToAdd=S\u00E9lectionnez des images et/ou des dossiers entiers \u00E0 ajouter \u00E0 la liste
 MainFrame.sortBtnTip=Trier les images de l'album courant par ordre alphab\u00E9tique
-MainFrame.sortBtnTxt=Trier les images ...
+MainFrame.sortBtnTxt=Trier les images
 MainFrame.statusBarNoSel={0, number, integer} pictures / {1, number, integer} K
 MainFrame.statusBarSel=S\u00E9lectionn\u00E9 {0, number, integer} {1} / {2, number, integer} K
 MainFrame.upldBtnTip=Envoyer les images qui ont \u00E9t\u00E9 ajout\u00E9es dans l'ensemble des albums, m\u00EAme pour les albums non affich\u00E9s
