@@ -1,3 +1,8 @@
+2004-03-25  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b9)
+
+	* On Java 1.4.2 and later, reading proxy from Java plugin in
+	  applet mode.
+
 2004-03-15  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b8)
 
 	* Fixed a bug in the applet uploader, where added pictures were
